RESOLVED FIXED71299
[Qt][WK2] Fix build of WebKitTestRunner with ELF symbol visibility
https://bugs.webkit.org/show_bug.cgi?id=71299
Summary [Qt][WK2] Fix build of WebKitTestRunner with ELF symbol visibility
Simon Hausmann
Reported 2011-11-01 10:07:57 PDT
[Qt][WK2] Fix build of WebKitTestRunner with ELF symbol visibility
Attachments
Patch (5.17 KB, patch)
2011-11-01 10:10 PDT, Simon Hausmann
kling: review+
Simon Hausmann
Comment 1 2011-11-01 10:10:30 PDT
Andreas Kling
Comment 2 2011-11-01 10:16:04 PDT
Comment on attachment 113182 [details] Patch I like how it looks a bit hackish, but really isn't. r=me
Simon Hausmann
Comment 3 2011-11-01 10:20:42 PDT
Note You need to log in before you can comment on or make changes to this bug.