[Qt][WK2] Fix build of WebKitTestRunner with ELF symbol visibility https://bugs.webkit.org/show_bug.cgi?id=71299

Reviewed by Andreas Kling.

Source/WebKit/qt:

Export an overload of QtDRT::injectInternalsObjects that is used by
the WK2 injected bundle.

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(DumpRenderTreeSupportQt::injectInternalsObject):
* WebCoreSupport/DumpRenderTreeSupportQt.h:

Tools:

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp: Use the properly exported symbol for the Qt
build to enable WebCoreTestSupport::injectInternalsObject.
(WTR::InjectedBundlePage::didClearWindowForFrame):
* WebKitTestRunner/InjectedBundle/qt/InjectedBundle.pro: Fix include path to DRTSupportQt

Canonical link: https://commits.webkit.org/87580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98975 268f45cc-cd09-0410-ab3c-d52691b4dbfc